# pyTalbot

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.py  mpitalbot.slurm  requirements.txt  tatus
pyTalbot/: benchmarks_talbot.py  perform_integrals.py  plotter.py  stationary_utils.py  talbot_utils.py  talbotconfig.py  transient_utils.py  video_maker.py
pyTalbot/src/: Makefile  integrals.c  integrals.cpp  integrals_levin.cpp
